preparing to pull all of 2023 as well

--- a/notebooks/1_01_fr24_data_extraction.ipynb
+++ b/notebooks/1_01_fr24_data_extraction.ipynb
@@ -285,383 +285,69 @@
     }
    ],
    "source": [
-    "save_path_root = \"../data/raw/df_flight_position_20241118_20241231_\" # No need to end with .csv, leave as \"_\" for timestamp\n",
+    "save_path_root = \"../data/raw/df_flight_position_20241118_20250131_\" # No need to end with .csv, leave as \"_\" for timestamp\n",
     "start_date = datetime(2024, 11, 18, 0, 0, 0)\n",
-    "end_date = datetime(2024, 12, 31, 23, 59, 59)\n",
+    "end_date = datetime(2025, 1, 31, 23, 59, 59)\n",
     "splits_per_hour = 12\n",
     "\n",
-    "rega_flight_positions = rega_flight_positions(flightradar_key,rega_ac_regs_string,save_path_root,start_date,end_date,splits_per_hour) "
+    "rega_flight_positions = rega_flight_positions(flightradar_key,rega_ac_regs_string,save_path_root,start_date,end_date,splits_per_hour) \n",
+    "\n",
+    "save_path_root = \"../data/raw/df_flight_position_20221201_20231231_\" # No need to end with .csv, leave as \"_\" for timestamp\n",
+    "start_date = datetime(2022, 12, 1, 0, 0, 0)\n",
+    "end_date = datetime(2023, 12, 31, 23, 59, 59)\n",
+    "splits_per_hour = 12\n",
+    "\n",
+    "rega_flight_positions = rega_flight_positions(flightradar_key,rega_ac_regs_string,save_path_root,start_date,end_date,splits_per_hour)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>fr24_id</th>\n",
-       "      <th>flight</th>\n",
-       "      <th>callsign</th>\n",
-       "      <th>lat</th>\n",
-       "      <th>lon</th>\n",
-       "      <th>track</th>\n",
-       "      <th>alt</th>\n",
-       "      <th>gspeed</th>\n",
-       "      <th>vspeed</th>\n",
-       "      <th>squawk</th>\n",
-       "      <th>...</th>\n",
-       "      <th>hex</th>\n",
-       "      <th>type</th>\n",
-       "      <th>reg</th>\n",
-       "      <th>painted_as</th>\n",
-       "      <th>operating_as</th>\n",
-       "      <th>orig_iata</th>\n",
-       "      <th>orig_icao</th>\n",
-       "      <th>dest_iata</th>\n",
-       "      <th>dest_icao</th>\n",
-       "      <th>eta</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>337327d8</td>\n",
-       "      <td>RGA2</td>\n",
-       "      <td>RGA02</td>\n",
-       "      <td>47.65457</td>\n",
-       "      <td>7.52488</td>\n",
-       "      <td>8</td>\n",
-       "      <td>2575</td>\n",
-       "      <td>124</td>\n",
-       "      <td>-448</td>\n",
-       "      <td>7100</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4B43B1</td>\n",
-       "      <td>EC45</td>\n",
-       "      <td>HB-ZQN</td>\n",
-       "      <td>RGA</td>\n",
-       "      <td>RGA</td>\n",
-       "      <td>BSL</td>\n",
-       "      <td>LFSB</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>337327d8</td>\n",
-       "      <td>RGA2</td>\n",
-       "      <td>RGA02</td>\n",
-       "      <td>47.82994</td>\n",
-       "      <td>7.66921</td>\n",
-       "      <td>40</td>\n",
-       "      <td>2525</td>\n",
-       "      <td>154</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7100</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4B43B1</td>\n",
-       "      <td>EC45</td>\n",
-       "      <td>HB-ZQN</td>\n",
-       "      <td>RGA</td>\n",
-       "      <td>RGA</td>\n",
-       "      <td>BSL</td>\n",
-       "      <td>LFSB</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>337327d8</td>\n",
-       "      <td>RGA2</td>\n",
-       "      <td>RGA02</td>\n",
-       "      <td>48.00197</td>\n",
-       "      <td>7.85825</td>\n",
-       "      <td>45</td>\n",
-       "      <td>3500</td>\n",
-       "      <td>144</td>\n",
-       "      <td>576</td>\n",
-       "      <td>7100</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4B43B1</td>\n",
-       "      <td>EC45</td>\n",
-       "      <td>HB-ZQN</td>\n",
-       "      <td>RGA</td>\n",
-       "      <td>RGA</td>\n",
-       "      <td>BSL</td>\n",
-       "      <td>LFSB</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>337327d8</td>\n",
-       "      <td>RGA2</td>\n",
-       "      <td>RGA02</td>\n",
-       "      <td>48.12985</td>\n",
-       "      <td>8.04826</td>\n",
-       "      <td>213</td>\n",
-       "      <td>3200</td>\n",
-       "      <td>21</td>\n",
-       "      <td>-640</td>\n",
-       "      <td>7100</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4B43B1</td>\n",
-       "      <td>EC45</td>\n",
-       "      <td>HB-ZQN</td>\n",
-       "      <td>RGA</td>\n",
-       "      <td>RGA</td>\n",
-       "      <td>BSL</td>\n",
-       "      <td>LFSB</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>33733dd4</td>\n",
-       "      <td>RGA2</td>\n",
-       "      <td>RGA02</td>\n",
-       "      <td>48.07436</td>\n",
-       "      <td>7.92854</td>\n",
-       "      <td>233</td>\n",
-       "      <td>3025</td>\n",
-       "      <td>86</td>\n",
-       "      <td>-128</td>\n",
-       "      <td>7100</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4B43B1</td>\n",
-       "      <td>EC45</td>\n",
-       "      <td>HB-ZQN</td>\n",
-       "      <td>RGA</td>\n",
-       "      <td>RGA</td>\n",
-       "      <td>QCF</td>\n",
-       "      <td>EDTF</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>36344</th>\n",
-       "      <td>352fac39</td>\n",
-       "      <td>RGA16</td>\n",
-       "      <td>RGA16</td>\n",
-       "      <td>47.07278</td>\n",
-       "      <td>9.05194</td>\n",
-       "      <td>182</td>\n",
-       "      <td>2950</td>\n",
-       "      <td>121</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7100</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4B43AF</td>\n",
-       "      <td>EC45</td>\n",
-       "      <td>HB-ZQL</td>\n",
-       "      <td>RGA</td>\n",
-       "      <td>RGA</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>36345</th>\n",
-       "      <td>352fbb93</td>\n",
-       "      <td>RGA7</td>\n",
-       "      <td>RGA07</td>\n",
-       "      <td>47.40518</td>\n",
-       "      <td>9.26630</td>\n",
-       "      <td>257</td>\n",
-       "      <td>2325</td>\n",
-       "      <td>99</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7100</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4B43B1</td>\n",
-       "      <td>EC45</td>\n",
-       "      <td>HB-ZQN</td>\n",
-       "      <td>RGA</td>\n",
-       "      <td>RGA</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>36346</th>\n",
-       "      <td>352fb333</td>\n",
-       "      <td>RGA3</td>\n",
-       "      <td>RGA03</td>\n",
-       "      <td>47.13577</td>\n",
-       "      <td>7.61845</td>\n",
-       "      <td>233</td>\n",
-       "      <td>2350</td>\n",
-       "      <td>108</td>\n",
-       "      <td>320</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4B43AC</td>\n",
-       "      <td>EC45</td>\n",
-       "      <td>HB-ZQI</td>\n",
-       "      <td>RGA</td>\n",
-       "      <td>RGA</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>36347</th>\n",
-       "      <td>352fb333</td>\n",
-       "      <td>RGA3</td>\n",
-       "      <td>RGA03</td>\n",
-       "      <td>47.01553</td>\n",
-       "      <td>7.47507</td>\n",
-       "      <td>210</td>\n",
-       "      <td>2750</td>\n",
-       "      <td>111</td>\n",
-       "      <td>-256</td>\n",
-       "      <td>7100</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4B43AC</td>\n",
-       "      <td>EC45</td>\n",
-       "      <td>HB-ZQI</td>\n",
-       "      <td>RGA</td>\n",
-       "      <td>RGA</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>36348</th>\n",
-       "      <td>352fecab</td>\n",
-       "      <td>RGA3</td>\n",
-       "      <td>RGA03</td>\n",
-       "      <td>46.90823</td>\n",
-       "      <td>7.50895</td>\n",
-       "      <td>177</td>\n",
-       "      <td>1725</td>\n",
-       "      <td>69</td>\n",
-       "      <td>-512</td>\n",
-       "      <td>7100</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4B43AC</td>\n",
-       "      <td>EC45</td>\n",
-       "      <td>HB-ZQI</td>\n",
-       "      <td>RGA</td>\n",
-       "      <td>RGA</td>\n",
-       "      <td>BRN</td>\n",
-       "      <td>LSZB</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>36349 rows × 22 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        fr24_id flight callsign       lat      lon  track   alt  gspeed  \\\n",
-       "0      337327d8   RGA2    RGA02  47.65457  7.52488      8  2575     124   \n",
-       "1      337327d8   RGA2    RGA02  47.82994  7.66921     40  2525     154   \n",
-       "2      337327d8   RGA2    RGA02  48.00197  7.85825     45  3500     144   \n",
-       "3      337327d8   RGA2    RGA02  48.12985  8.04826    213  3200      21   \n",
-       "4      33733dd4   RGA2    RGA02  48.07436  7.92854    233  3025      86   \n",
-       "...         ...    ...      ...       ...      ...    ...   ...     ...   \n",
-       "36344  352fac39  RGA16    RGA16  47.07278  9.05194    182  2950     121   \n",
-       "36345  352fbb93   RGA7    RGA07  47.40518  9.26630    257  2325      99   \n",
-       "36346  352fb333   RGA3    RGA03  47.13577  7.61845    233  2350     108   \n",
-       "36347  352fb333   RGA3    RGA03  47.01553  7.47507    210  2750     111   \n",
-       "36348  352fecab   RGA3    RGA03  46.90823  7.50895    177  1725      69   \n",
-       "\n",
-       "       vspeed  squawk  ...     hex  type     reg painted_as operating_as  \\\n",
-       "0        -448    7100  ...  4B43B1  EC45  HB-ZQN        RGA          RGA   \n",
-       "1           0    7100  ...  4B43B1  EC45  HB-ZQN        RGA          RGA   \n",
-       "2         576    7100  ...  4B43B1  EC45  HB-ZQN        RGA          RGA   \n",
-       "3        -640    7100  ...  4B43B1  EC45  HB-ZQN        RGA          RGA   \n",
-       "4        -128    7100  ...  4B43B1  EC45  HB-ZQN        RGA          RGA   \n",
-       "...       ...     ...  ...     ...   ...     ...        ...          ...   \n",
-       "36344       0    7100  ...  4B43AF  EC45  HB-ZQL        RGA          RGA   \n",
-       "36345       0    7100  ...  4B43B1  EC45  HB-ZQN        RGA          RGA   \n",
-       "36346     320       0  ...  4B43AC  EC45  HB-ZQI        RGA          RGA   \n",
-       "36347    -256    7100  ...  4B43AC  EC45  HB-ZQI        RGA          RGA   \n",
-       "36348    -512    7100  ...  4B43AC  EC45  HB-ZQI        RGA          RGA   \n",
-       "\n",
-       "      orig_iata orig_icao dest_iata dest_icao  eta  \n",
-       "0           BSL      LFSB       NaN       NaN  NaN  \n",
-       "1           BSL      LFSB       NaN       NaN  NaN  \n",
-       "2           BSL      LFSB       NaN       NaN  NaN  \n",
-       "3           BSL      LFSB       NaN       NaN  NaN  \n",
-       "4           QCF      EDTF       NaN       NaN  NaN  \n",
-       "...         ...       ...       ...       ...  ...  \n",
-       "36344       NaN       NaN       NaN       NaN  NaN  \n",
-       "36345       NaN       NaN       NaN       NaN  NaN  \n",
-       "36346       NaN       NaN       NaN       NaN  NaN  \n",
-       "36347       NaN       NaN       NaN       NaN  NaN  \n",
-       "36348       BRN      LSZB       NaN       NaN  NaN  \n",
-       "\n",
-       "[36349 rows x 22 columns]"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 87412 entries, 0 to 87411\n",
+      "Data columns (total 22 columns):\n",
+      " #   Column        Non-Null Count  Dtype  \n",
+      "---  ------        --------------  -----  \n",
+      " 0   fr24_id       87412 non-null  object \n",
+      " 1   flight        78719 non-null  object \n",
+      " 2   callsign      87207 non-null  object \n",
+      " 3   lat           87412 non-null  float64\n",
+      " 4   lon           87412 non-null  float64\n",
+      " 5   track         87412 non-null  int64  \n",
+      " 6   alt           87412 non-null  int64  \n",
+      " 7   gspeed        87412 non-null  int64  \n",
+      " 8   vspeed        87412 non-null  int64  \n",
+      " 9   squawk        87412 non-null  int64  \n",
+      " 10  timestamp     87412 non-null  object \n",
+      " 11  source        87412 non-null  object \n",
+      " 12  hex           87412 non-null  object \n",
+      " 13  type          87412 non-null  object \n",
+      " 14  reg           87412 non-null  object \n",
+      " 15  painted_as    87412 non-null  object \n",
+      " 16  operating_as  87412 non-null  object \n",
+      " 17  orig_iata     75120 non-null  object \n",
+      " 18  orig_icao     75120 non-null  object \n",
+      " 19  dest_iata     45510 non-null  object \n",
+      " 20  dest_icao     45510 non-null  object \n",
+      " 21  eta           41907 non-null  object \n",
+      "dtypes: float64(2), int64(5), object(15)\n",
+      "memory usage: 14.7+ MB\n"
+     ]
     }
    ],
    "source": [
-    "df = pd.read_csv(\"../data/raw/df_flight_position_20240101_20241231_2024-05-12 23:00:00_1738403045.csv\")\n",
+    "df1 = pd.read_csv(\"../data/raw/df_flight_position_20240101_20241231_2024-05-12 23:00:00_1738403045.csv\")\n",
+    "df2 = pd.read_csv(\"../data/raw/df_flight_position_202405013_20241231_2024-11-17 23:00:00_1738489014.csv\")\n",
+    "\n",
+    "# Append df1 and df2\n",
+    "df = pd.concat([df1, df2], ignore_index=True)\n",
+    "df.info()\n",
     "df"
    ]
   },
