--- a/notebooks/1_01_fr24_data_extraction.ipynb
+++ b/notebooks/1_01_fr24_data_extraction.ipynb
@@ -256,19 +256,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Date range from 2024-05-13 00:00:00 to 2024-12-31 23:59:59\n",
-      "Query 54439 of expected 67104\n",
-      "The last progress save was on 2024-11-17 23:00:00 at 1738489014\n",
-      "Date 4537 of 5592 and Timestamp 7 of 12\n",
-      "Requesting on date 2024-11-18 00:00:00 at timestamp 1731886200\n",
-      "No data found for date 2024-11-18 00:00:00 at timestamp 1731886200\n"
+      "Date range from 2022-12-01 00:00:00 to 2023-12-31 23:59:59\n",
+      "Query 46375 of expected 114048\n",
+      "The last progress save was on 2023-05-10 23:00:00 at 1738568568\n",
+      "Date 3865 of 9504 and Timestamp 7 of 12\n",
+      "Requesting on date 2023-05-11 00:00:00 at timestamp 1683757800\n",
+      "{\n",
+      "    \"data\": [\n",
+      "        {\n",
+      "            \"fr24_id\": \"303c661c\",\n",
+      "            \"flight\": \"RGA4\",\n",
+      "            \"callsign\": \"RGA04\",\n",
+      "            \"lat\": 46.58487,\n",
+      "            \"lon\": 6.62127,\n",
+      "            \"track\": 162,\n",
+      "            \"alt\": 3200,\n",
+      "            \"gspeed\": 116,\n",
+      "            \"vspeed\": 0,\n",
+      "            \"squawk\": \"7100\",\n",
+      "            \"timestamp\": \"2023-05-10T22:30:00Z\",\n",
+      "            \"source\": \"ADSB\",\n",
+      "            \"hex\": \"4B43B1\",\n",
+      "            \"type\": \"EC45\",\n",
+      "            \"reg\": \"HB-ZQN\",\n",
+      "            \"painted_as\": \"RGA\",\n",
+      "            \"operating_as\": \"RGA\",\n",
+      "            \"orig_iata\": \"QYL\",\n",
+      "            \"orig_icao\": \"LSGL\",\n",
+      "            \"dest_iata\": null,\n",
+      "            \"dest_icao\": null,\n",
+      "            \"eta\": null\n",
+      "        }\n",
+      "    ]\n",
+      "}\n"
      ]
     },
     {
@@ -278,26 +305,19 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 6\u001b[0m\n\u001b[1;32m      3\u001b[0m end_date \u001b[38;5;241m=\u001b[39m datetime(\u001b[38;5;241m2024\u001b[39m, \u001b[38;5;241m12\u001b[39m, \u001b[38;5;241m31\u001b[39m, \u001b[38;5;241m23\u001b[39m, \u001b[38;5;241m59\u001b[39m, \u001b[38;5;241m59\u001b[39m)\n\u001b[1;32m      4\u001b[0m splits_per_hour \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m12\u001b[39m\n\u001b[0;32m----> 6\u001b[0m rega_flight_positions \u001b[38;5;241m=\u001b[39m \u001b[43mrega_flight_positions\u001b[49m\u001b[43m(\u001b[49m\u001b[43mflightradar_key\u001b[49m\u001b[43m,\u001b[49m\u001b[43mrega_ac_regs_string\u001b[49m\u001b[43m,\u001b[49m\u001b[43msave_path_root\u001b[49m\u001b[43m,\u001b[49m\u001b[43mstart_date\u001b[49m\u001b[43m,\u001b[49m\u001b[43mend_date\u001b[49m\u001b[43m,\u001b[49m\u001b[43msplits_per_hour\u001b[49m\u001b[43m)\u001b[49m \n",
+      "Cell \u001b[0;32mIn[6], line 6\u001b[0m\n\u001b[1;32m      3\u001b[0m end_date \u001b[38;5;241m=\u001b[39m datetime(\u001b[38;5;241m2023\u001b[39m, \u001b[38;5;241m12\u001b[39m, \u001b[38;5;241m31\u001b[39m, \u001b[38;5;241m23\u001b[39m, \u001b[38;5;241m59\u001b[39m, \u001b[38;5;241m59\u001b[39m)\n\u001b[1;32m      4\u001b[0m splits_per_hour \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m12\u001b[39m\n\u001b[0;32m----> 6\u001b[0m rega_flight_positions \u001b[38;5;241m=\u001b[39m \u001b[43mrega_flight_positions\u001b[49m\u001b[43m(\u001b[49m\u001b[43mflightradar_key\u001b[49m\u001b[43m,\u001b[49m\u001b[43mrega_ac_regs_string\u001b[49m\u001b[43m,\u001b[49m\u001b[43msave_path_root\u001b[49m\u001b[43m,\u001b[49m\u001b[43mstart_date\u001b[49m\u001b[43m,\u001b[49m\u001b[43mend_date\u001b[49m\u001b[43m,\u001b[49m\u001b[43msplits_per_hour\u001b[49m\u001b[43m)\u001b[49m \n",
       "Cell \u001b[0;32mIn[5], line 40\u001b[0m, in \u001b[0;36mrega_flight_positions\u001b[0;34m(flightradar_key, rega_ac_regs_string, save_path_root, start_date, end_date, splits_per_hour)\u001b[0m\n\u001b[1;32m     38\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m k, timestamp \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(timestamps): \n\u001b[1;32m     39\u001b[0m     query_no \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m---> 40\u001b[0m     \u001b[43mtime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m0.67\u001b[39;49m\u001b[43m)\u001b[49m \n\u001b[1;32m     41\u001b[0m     params[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtimestamp\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m timestamp \n\u001b[1;32m     43\u001b[0m     \u001b[38;5;66;03m# Debugging line\u001b[39;00m\n",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
    "source": [
-    "save_path_root = \"../data/raw/df_flight_position_20241118_20250131_\" # No need to end with .csv, leave as \"_\" for timestamp\n",
-    "start_date = datetime(2024, 11, 18, 0, 0, 0)\n",
-    "end_date = datetime(2025, 1, 31, 23, 59, 59)\n",
-    "splits_per_hour = 12\n",
-    "\n",
-    "rega_flight_positions = rega_flight_positions(flightradar_key,rega_ac_regs_string,save_path_root,start_date,end_date,splits_per_hour) \n",
-    "\n",
     "save_path_root = \"../data/raw/df_flight_position_20221201_20231231_\" # No need to end with .csv, leave as \"_\" for timestamp\n",
     "start_date = datetime(2022, 12, 1, 0, 0, 0)\n",
     "end_date = datetime(2023, 12, 31, 23, 59, 59)\n",
     "splits_per_hour = 12\n",
     "\n",
-    "rega_flight_positions = rega_flight_positions(flightradar_key,rega_ac_regs_string,save_path_root,start_date,end_date,splits_per_hour)"
+    "rega_flight_positions = rega_flight_positions(flightradar_key,rega_ac_regs_string,save_path_root,start_date,end_date,splits_per_hour) "
    ]
   },
   {
